# sarch32

./: CMakeLists.txt  README.md
include/: sarch.h
src/: computer.cpp  computer.hpp  computer_main.cpp  macros.h  main.c  sarch.c  sarch_fetch.c  sarch_fetch.h
src/devices/: diskdev.cpp  diskdev.hpp  iodevice.cpp  iodevice.hpp  ioinfo.cpp  ioinfo.hpp  ram.cpp  ram.hpp  rom.cpp  rom.hpp  stdiodev.cpp  stdiodev.hpp
